--- a/settings.json
+++ b/settings.json
@@ -15,7 +15,7 @@
   "cloudinary_secret": "rPPXD3rZM_GCjODvh0T70XeDCSw",
   "galaxy.meteor.com": {
     "env": {
-      "MONGO_URL": "mongodb://bikeloaneradmin:Turnf34ragainst!@aws-us-east-1-portal.21.dblayer.com:10444/bikeloanerdb?ssl=true",
+      "MONGO_URL": "mongodb://bikeloaneradmin:turnfearagainstthose@aws-us-east-1-portal.21.dblayer.com:10444/bikeloanerdb?ssl=true",
       "ROOT_URL": "https://www.bikeloaner.meteorapp.com"
 
     }
